org.sourcepit.antlr4.eclipse.lang.tests/gen/org/sourcepit/antlr4/eclipse/lang/tests/line/LineParser.java
// Generated from Line.g4 by ANTLR 4.5

/**
 * Copyright 2015 Bernd Vogt and others.
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.sourcepit.antlr4.eclipse.lang.tests.line;

import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class LineParser extends Parser {
   static {
      RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION);
   }

   protected static final DFA[] _decisionToDFA;
   protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
   public static final int T__0 = 1, T__1 = 2, AT = 3, STAR = 4, WORD = 5, NL = 6, WS = 7;
   public static final int RULE_javadoc = 0, RULE_javadocStart = 1, RULE_javadocEnd = 2, RULE_mainDescription = 3,
      RULE_line = 4, RULE_prefix = 5, RULE_text = 6;
   public static final String[] ruleNames = { "javadoc", "javadocStart", "javadocEnd", "mainDescription", "line",
      "prefix", "text" };

   private static final String[] _LITERAL_NAMES = { null, "'/**'", "'*/'", "'@'", "'*'" };
   private static final String[] _SYMBOLIC_NAMES = { null, null, null, "AT", "STAR", "WORD", "NL", "WS" };
   public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

   /**
    * @deprecated Use {@link #VOCABULARY} instead.
    */
   @Deprecated
   public static final String[] tokenNames;

   static {
      tokenNames = new String[_SYMBOLIC_NAMES.length];
      for (int i = 0; i < tokenNames.length; i++) {
         tokenNames[i] = VOCABULARY.getLiteralName(i);
         if (tokenNames[i] == null) {
            tokenNames[i] = VOCABULARY.getSymbolicName(i);
         }

         if (tokenNames[i] == null) {
            tokenNames[i] = "<INVALID>";
         }
      }
   }

   @Override
   @Deprecated
   public String[] getTokenNames() {
      return tokenNames;
   }

   @Override

   public Vocabulary getVocabulary() {
      return VOCABULARY;
   }

   @Override
   public String getGrammarFileName() {
      return "Line.g4";
   }

   @Override
   public String[] getRuleNames() {
      return ruleNames;
   }

   @Override
   public String getSerializedATN() {
      return _serializedATN;
   }

   @Override
   public ATN getATN() {
      return _ATN;
   }

   public LineParser(TokenStream input) {
      super(input);
      _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
   }

   public static class JavadocContext extends ParserRuleContext {
      public JavadocStartContext javadocStart() {
         return getRuleContext(JavadocStartContext.class, 0);
      }

      public JavadocEndContext javadocEnd() {
         return getRuleContext(JavadocEndContext.class, 0);
      }

      public MainDescriptionContext mainDescription() {
         return getRuleContext(MainDescriptionContext.class, 0);
      }

      public JavadocContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_javadoc;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).enterJavadoc(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).exitJavadoc(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof LineVisitor)
            return ((LineVisitor<? extends T>) visitor).visitJavadoc(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final JavadocContext javadoc() throws RecognitionException {
      JavadocContext _localctx = new JavadocContext(_ctx, getState());
      enterRule(_localctx, 0, RULE_javadoc);
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(14);
            javadocStart();
            setState(16);
            switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
               case 1 : {
                  setState(15);
                  mainDescription();
               }
                  break;
            }
            setState(18);
            javadocEnd();
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class JavadocStartContext extends ParserRuleContext {
      public List<TerminalNode> STAR() {
         return getTokens(LineParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(LineParser.STAR, i);
      }

      public List<TerminalNode> WS() {
         return getTokens(LineParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(LineParser.WS, i);
      }

      public JavadocStartContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_javadocStart;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).enterJavadocStart(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).exitJavadocStart(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof LineVisitor)
            return ((LineVisitor<? extends T>) visitor).visitJavadocStart(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final JavadocStartContext javadocStart() throws RecognitionException {
      JavadocStartContext _localctx = new JavadocStartContext(_ctx, getState());
      enterRule(_localctx, 2, RULE_javadocStart);
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(20);
            match(T__0);
            setState(24);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(21);
                        match(STAR);
                     }
                  }
               }
               setState(26);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
            }
            setState(30);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(27);
                        match(WS);
                     }
                  }
               }
               setState(32);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
            }
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class JavadocEndContext extends ParserRuleContext {
      public List<TerminalNode> STAR() {
         return getTokens(LineParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(LineParser.STAR, i);
      }

      public JavadocEndContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_javadocEnd;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).enterJavadocEnd(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).exitJavadocEnd(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof LineVisitor)
            return ((LineVisitor<? extends T>) visitor).visitJavadocEnd(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final JavadocEndContext javadocEnd() throws RecognitionException {
      JavadocEndContext _localctx = new JavadocEndContext(_ctx, getState());
      enterRule(_localctx, 4, RULE_javadocEnd);
      int _la;
      try {
         enterOuterAlt(_localctx, 1);
         {
            setState(36);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == STAR) {
               {
                  {
                     setState(33);
                     match(STAR);
                  }
               }
               setState(38);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(39);
            match(T__1);
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class MainDescriptionContext extends ParserRuleContext {
      public List<LineContext> line() {
         return getRuleContexts(LineContext.class);
      }

      public LineContext line(int i) {
         return getRuleContext(LineContext.class, i);
      }

      public MainDescriptionContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_mainDescription;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).enterMainDescription(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).exitMainDescription(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof LineVisitor)
            return ((LineVisitor<? extends T>) visitor).visitMainDescription(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final MainDescriptionContext mainDescription() throws RecognitionException {
      MainDescriptionContext _localctx = new MainDescriptionContext(_ctx, getState());
      enterRule(_localctx, 6, RULE_mainDescription);
      try {
         int _alt;
         setState(53);
         switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
            case 1 :
               enterOuterAlt(_localctx, 1); {
               setState(44);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
               while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                  if (_alt == 1) {
                     {
                        {
                           setState(41);
                           line(false);
                        }
                     }
                  }
                  setState(46);
                  _errHandler.sync(this);
                  _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
               }
               setState(47);
               line(true);
            }
               break;
            case 2 :
               enterOuterAlt(_localctx, 2); {
               setState(49);
               _errHandler.sync(this);
               _alt = 1;
               do {
                  switch (_alt) {
                     case 1 : {
                        {
                           setState(48);
                           line(false);
                        }
                     }
                        break;
                     default :
                        throw new NoViableAltException(this);
                  }
                  setState(51);
                  _errHandler.sync(this);
                  _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
               }
               while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
               break;
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class LineContext extends ParserRuleContext {
      public boolean allowMissingNl;

      public PrefixContext prefix() {
         return getRuleContext(PrefixContext.class, 0);
      }

      public TerminalNode NL() {
         return getToken(LineParser.NL, 0);
      }

      public TextContext text() {
         return getRuleContext(TextContext.class, 0);
      }

      public LineContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      public LineContext(ParserRuleContext parent, int invokingState, boolean allowMissingNl) {
         super(parent, invokingState);
         this.allowMissingNl = allowMissingNl;
      }

      @Override
      public int getRuleIndex() {
         return RULE_line;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).enterLine(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).exitLine(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof LineVisitor)
            return ((LineVisitor<? extends T>) visitor).visitLine(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final LineContext line(boolean allowMissingNl) throws RecognitionException {
      LineContext _localctx = new LineContext(_ctx, getState(), allowMissingNl);
      enterRule(_localctx, 8, RULE_line);
      try {
         setState(67);
         switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
            case 1 :
               enterOuterAlt(_localctx, 1); {
               setState(55);
               prefix();
               setState(57);
               switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                  case 1 : {
                     setState(56);
                     text(true);
                  }
                     break;
               }
               setState(59);
               match(NL);
            }
               break;
            case 2 :
               enterOuterAlt(_localctx, 2); {
               setState(61);
               text(false);
               setState(62);
               match(NL);
            }
               break;
            case 3 :
               enterOuterAlt(_localctx, 3); {
               setState(64);
               match(NL);
            }
               break;
            case 4 :
               enterOuterAlt(_localctx, 4); {
               setState(65);
               if (!(_localctx.allowMissingNl))
                  throw new FailedPredicateException(this, "$allowMissingNl");
               setState(66);
               text(false);
            }
               break;
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class PrefixContext extends ParserRuleContext {
      public List<TerminalNode> WS() {
         return getTokens(LineParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(LineParser.WS, i);
      }

      public List<TerminalNode> STAR() {
         return getTokens(LineParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(LineParser.STAR, i);
      }

      public PrefixContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      @Override
      public int getRuleIndex() {
         return RULE_prefix;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).enterPrefix(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).exitPrefix(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof LineVisitor)
            return ((LineVisitor<? extends T>) visitor).visitPrefix(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final PrefixContext prefix() throws RecognitionException {
      PrefixContext _localctx = new PrefixContext(_ctx, getState());
      enterRule(_localctx, 10, RULE_prefix);
      int _la;
      try {
         int _alt;
         enterOuterAlt(_localctx, 1);
         {
            setState(72);
            _errHandler.sync(this);
            _la = _input.LA(1);
            while (_la == WS) {
               {
                  {
                     setState(69);
                     match(WS);
                  }
               }
               setState(74);
               _errHandler.sync(this);
               _la = _input.LA(1);
            }
            setState(76);
            _errHandler.sync(this);
            _alt = 1;
            do {
               switch (_alt) {
                  case 1 : {
                     {
                        setState(75);
                        match(STAR);
                     }
                  }
                     break;
                  default :
                     throw new NoViableAltException(this);
               }
               setState(78);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
            }
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            setState(83);
            _errHandler.sync(this);
            _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
               if (_alt == 1) {
                  {
                     {
                        setState(80);
                        match(WS);
                     }
                  }
               }
               setState(85);
               _errHandler.sync(this);
               _alt = getInterpreter().adaptivePredict(_input, 11, _ctx);
            }
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public static class TextContext extends ParserRuleContext {
      public boolean prefixed;

      public List<TerminalNode> WORD() {
         return getTokens(LineParser.WORD);
      }

      public TerminalNode WORD(int i) {
         return getToken(LineParser.WORD, i);
      }

      public List<TerminalNode> STAR() {
         return getTokens(LineParser.STAR);
      }

      public TerminalNode STAR(int i) {
         return getToken(LineParser.STAR, i);
      }

      public List<TerminalNode> WS() {
         return getTokens(LineParser.WS);
      }

      public TerminalNode WS(int i) {
         return getToken(LineParser.WS, i);
      }

      public List<TerminalNode> AT() {
         return getTokens(LineParser.AT);
      }

      public TerminalNode AT(int i) {
         return getToken(LineParser.AT, i);
      }

      public TextContext(ParserRuleContext parent, int invokingState) {
         super(parent, invokingState);
      }

      public TextContext(ParserRuleContext parent, int invokingState, boolean prefixed) {
         super(parent, invokingState);
         this.prefixed = prefixed;
      }

      @Override
      public int getRuleIndex() {
         return RULE_text;
      }

      @Override
      public void enterRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).enterText(this);
      }

      @Override
      public void exitRule(ParseTreeListener listener) {
         if (listener instanceof LineListener)
            ((LineListener) listener).exitText(this);
      }

      @Override
      public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
         if (visitor instanceof LineVisitor)
            return ((LineVisitor<? extends T>) visitor).visitText(this);
         else
            return visitor.visitChildren(this);
      }
   }

   public final TextContext text(boolean prefixed) throws RecognitionException {
      TextContext _localctx = new TextContext(_ctx, getState(), prefixed);
      enterRule(_localctx, 12, RULE_text);
      int _la;
      try {
         int _alt;
         setState(122);
         switch (getInterpreter().adaptivePredict(_input, 18, _ctx)) {
            case 1 :
               enterOuterAlt(_localctx, 1); {
               setState(86);
               if (!(_localctx.prefixed))
                  throw new FailedPredicateException(this, "$prefixed");
               setState(94);
               _errHandler.sync(this);
               _alt = 1;
               do {
                  switch (_alt) {
                     case 1 : {
                        {
                           setState(87);
                           _la = _input.LA(1);
                           if (!(_la == STAR || _la == WORD)) {
                              _errHandler.recoverInline(this);
                           }
                           else {
                              consume();
                           }
                           setState(91);
                           _errHandler.sync(this);
                           _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                           while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                              if (_alt == 1) {
                                 {
                                    {
                                       setState(88);
                                       _la = _input.LA(1);
                                       if (!((((_la) & ~0x3f) == 0 && ((1L << _la)
                                          & ((1L << AT) | (1L << STAR) | (1L << WORD) | (1L << WS))) != 0))) {
                                          _errHandler.recoverInline(this);
                                       }
                                       else {
                                          consume();
                                       }
                                    }
                                 }
                              }
                              setState(93);
                              _errHandler.sync(this);
                              _alt = getInterpreter().adaptivePredict(_input, 12, _ctx);
                           }
                        }
                     }
                        break;
                     default :
                        throw new NoViableAltException(this);
                  }
                  setState(96);
                  _errHandler.sync(this);
                  _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
               }
               while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
               break;
            case 2 :
               enterOuterAlt(_localctx, 2); {
               setState(98);
               if (!(!_localctx.prefixed))
                  throw new FailedPredicateException(this, "!$prefixed");
               setState(112);
               _errHandler.sync(this);
               _alt = 1;
               do {
                  switch (_alt) {
                     case 1 : {
                        {
                           setState(102);
                           _errHandler.sync(this);
                           _la = _input.LA(1);
                           while (_la == WS) {
                              {
                                 {
                                    setState(99);
                                    match(WS);
                                 }
                              }
                              setState(104);
                              _errHandler.sync(this);
                              _la = _input.LA(1);
                           }
                           setState(105);
                           match(WORD);
                           setState(109);
                           _errHandler.sync(this);
                           _alt = getInterpreter().adaptivePredict(_input, 15, _ctx);
                           while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                              if (_alt == 1) {
                                 {
                                    {
                                       setState(106);
                                       _la = _input.LA(1);
                                       if (!((((_la) & ~0x3f) == 0 && ((1L << _la)
                                          & ((1L << AT) | (1L << STAR) | (1L << WORD) | (1L << WS))) != 0))) {
                                          _errHandler.recoverInline(this);
                                       }
                                       else {
                                          consume();
                                       }
                                    }
                                 }
                              }
                              setState(111);
                              _errHandler.sync(this);
                              _alt = getInterpreter().adaptivePredict(_input, 15, _ctx);
                           }
                        }
                     }
                        break;
                     default :
                        throw new NoViableAltException(this);
                  }
                  setState(114);
                  _errHandler.sync(this);
                  _alt = getInterpreter().adaptivePredict(_input, 16, _ctx);
               }
               while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
               break;
            case 3 :
               enterOuterAlt(_localctx, 3); {
               setState(116);
               if (!(!_localctx.prefixed))
                  throw new FailedPredicateException(this, "!$prefixed");
               setState(118);
               _errHandler.sync(this);
               _alt = 1;
               do {
                  switch (_alt) {
                     case 1 : {
                        {
                           setState(117);
                           match(WS);
                        }
                     }
                        break;
                     default :
                        throw new NoViableAltException(this);
                  }
                  setState(120);
                  _errHandler.sync(this);
                  _alt = getInterpreter().adaptivePredict(_input, 17, _ctx);
               }
               while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
            }
               break;
         }
      }
      catch (RecognitionException re) {
         _localctx.exception = re;
         _errHandler.reportError(this, re);
         _errHandler.recover(this, re);
      }
      finally {
         exitRule();
      }
      return _localctx;
   }

   public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
      switch (ruleIndex) {
         case 4 :
            return line_sempred((LineContext) _localctx, predIndex);
         case 6 :
            return text_sempred((TextContext) _localctx, predIndex);
      }
      return true;
   }

   private boolean line_sempred(LineContext _localctx, int predIndex) {
      switch (predIndex) {
         case 0 :
            return _localctx.allowMissingNl;
      }
      return true;
   }

   private boolean text_sempred(TextContext _localctx, int predIndex) {
      switch (predIndex) {
         case 1 :
            return _localctx.prefixed;
         case 2 :
            return !_localctx.prefixed;
         case 3 :
            return !_localctx.prefixed;
      }
      return true;
   }

   public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());

   static {
      _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
      for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
         _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
      }
   }
}